--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<!-- ICS20-Unit1-03-html-hello-world -->
+<!-- ICS2O-Unit1-04-CSS -->
 <html lang="en-ca">
   <head>
-    <meta charset="utf-8">
-    <meta name="description" content="My first webpage, with proper style">
-    <meta name="keywords" content="mths, ics20">
-    <meta name="author" content="Andre Deveau">
-    <meta name="viewport" content="width=device-width, initial-scale-1.0">
-    <title>My first webpage, with proper style</title>
-     <link rel="stylesheet" href="./css/style.css" />
+    <meta charset="utf-8" />
+    <meta name="description" content="My first webpage, with CSS" />
+    <meta name="keywords" content="MTHS, ICS2O" />
+    <meta name="author" content="Andre Deveau" />
+    <meta name="viewpoint" content="width=device-width, initial-scale=0-1" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>My first webpage, with CSS</title>
   </head>
-  <!-- This is the body of the Website -->
-  <body style="background-color:powderblue;">
-    <h1 id="my-header">Hello World!</h1>
-    <p style="background-color:#ff00ff;">Proper HTML style is important</p>
-    <img src="./images/HTML-style-guide.jpeg" alt="style">
+  <body>
+    <h1>Style is important</h1>
+    <p>Proper HTML style is important</p>
+    <img src="./images/HTML-style-guide.jpeg" alt="style" />
     <p>
       <a href="./index2.html">My index2.html page</a>
     </p>
