--- a/index2.html
+++ b/index2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<!-- ICS2O-Unit1-04-HTML-CSS -->
+<!-- ICS2O-Unit1-04-CSS -->
 <html lang="en-ca">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="My second webpage, with CSS" />
-    <meta name="keywords" content="mths, ics2o" />
-    <meta name="author" content="Mr. Coxall" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="My first webpage, with CSS" />
+    <meta name="keywords" content="MTHS, ICS2O" />
+    <meta name="author" content="Andre Deveau" />
+    <meta name="viewpoint" content="width=device-width, initial-scale=0-1" />
     <link rel="stylesheet" href="./css/style2.css" />
     <title>My second webpage, with CSS</title>
   </head>
@@ -14,14 +14,32 @@
     <h1>Style is important</h1>
     <p>Here is a list</p>
     <ul>
-      <li>Coffee</li>
-      <li>Tea</li>
-      <li>Milk</li>
+      <li>Pineapple</li>
+      <li>Grapes</li>
+      <li>Apples</li>
     </ul>
     <p>Here is a table</p>
     <table>
       <tr>
-        <th>Company</th>
-        <th>Contact</th>
-        <th>Country</th>
+        <th>Event</th>
+        <th>Day</th>
+        <th>Time</th>
       </tr>
+      <tr>
+        <td>Ben's Soccer Game</td>
+        <td>September 29, 2022</td>
+        <td>6:30 pm</td>
+      </tr>
+      <tr>
+        <td>Poppy's Birthday Part</td>
+        <td>October 4, 2022</td>
+        <td>11:00 am</td>
+      </tr>
+      <tr>
+        <td>Brian's Haircut</td>
+        <td>October 11, 2022</td>
+        <td>5:30 pm</td>
+      </tr>
+    </table>
+  </body>
+</html>
